[project]
name = "hackathon-poridhi-gradient"
version = "0.1.0"
description = ""
authors = [
    {name = "ShawonKazi",email = "shawon2594@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "llama-index (>=0.12.33,<0.13.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "llama-index-retrievers-bm25 (>=0.5.2,<0.6.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "mflow (>=1.0.3,<2.0.0)",
    "llama-index-llms-groq (>=0.3.1,<0.4.0)",
    "llama-index-embeddings-huggingface (>=0.5.3,<0.6.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
